--- a/components/Menu-Nav/menu-nav.module.css
+++ b/components/Menu-Nav/menu-nav.module.css
@@ -1,9 +1,9 @@
 .body {
-  background-color: whitesmoke;
-  background-color: gainsboro;
+  color: white;
   grid-area: head;
   position: fixed;
-  z-index: 5;
+  top: 130px;
+  z-index: 10;
   width: 100%;
   height: 100px;
   display: flex;
@@ -11,7 +11,18 @@
   align-items: center;
   flex-direction: row;
 }
+.body::after {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  height: 100%;
+}
 .body main {
+  z-index: 1;
   height: 100%;
   width: 75%;
   padding: 0 1rem;
@@ -143,6 +154,7 @@
 }
 @media screen and (max-width: 480px) {
   .body {
+    top: 100px;
     height: 130px;
   }
   .body main {
