--- a/components/Menu-Nav/menu-nav.module.scss
+++ b/components/Menu-Nav/menu-nav.module.scss
@@ -5,31 +5,37 @@
 }
 
 .body {
-  background-color: whitesmoke;
-  background-color: gainsboro;
-  // background-color: rgb(171, 171, 171);
-  // background-color: rgb(199, 199, 199);
-  // background-color: rgb(146, 140, 140);
-  // background-color: rgb(200, 198, 198);
+  color: white;
   grid-area: head;
   position: fixed;
-  z-index: 5;
+  top: 130px;
+  z-index: 10;
   width: 100%;
   height: 100px;
   @include center;
   flex-direction: row;
 
+  &::after {
+    content: "";
+    background-color: rgba(0, 0, 0, 0.6);
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    height: 100%;
+  }
+
   main {
+    z-index: 1;
     height: 100%;
     width: 75%;
     padding: 0 1rem;
     @include center;
     justify-content: space-around;
-    // color: white;
 
     .title {
       @include center;
-
       flex-direction: column;
 
       h4 {
@@ -69,7 +75,6 @@
           .list {
             @include center;
             flex-direction: column;
-            // user-select: none;
 
             h4 {
               margin: 0;
@@ -203,9 +208,9 @@
 
 @media screen and (max-width: 480px) {
   .body {
+    top: 100px;
     height: 130px;
-    // background-color: black;
-    // color: white;
+
     main {
       padding: 0;
       flex-direction: column;
