--- a/styles/[id].module.scss
+++ b/styles/[id].module.scss
@@ -122,6 +122,9 @@
           width: 100%;
           padding: 0.8rem;
           line-height: 1.8;
+          // background: linear-gradient(white, white, white, silver);
+          // background: linear-gradient(white, white,  lightgray);
+          // box-shadow: 0px -20px 10px 0px black inset;
 
           p {
             margin: 0;
