--- a/components/contact/contact.module.css
+++ b/components/contact/contact.module.css
@@ -1,7 +1,7 @@
 .body {
   width: 100%;
   padding: 5rem;
-  background-image: url("/image/contact.jpg");
+  background-image: url("/image/contact01.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
