--- a/styles/[id].module.scss
+++ b/styles/[id].module.scss
@@ -22,24 +22,26 @@
 
   .pageTitle,
   .pageTitleCocktail {
-    color: white;
     @include center;
-    margin-bottom: 2rem;
+    color: white;
     z-index: 1;
+    padding: 1rem 0;
+    margin-bottom: 2rem;
 
     h1 {
+      font-size: 2rem;
       margin: 0;
     }
   }
 
   .pageTitleCocktail {
-    color: white;
-    @include center;
-    margin-bottom: 2rem;
-    z-index: 1;
+    h1:nth-child(2) {
+      margin-left: 1rem;
+    }
 
     h1 {
-      margin-left: 1rem;
+      font-size: 2rem;
+      margin: 0;
     }
   }
 
@@ -60,11 +62,12 @@
       bottom: 0;
       height: 100%;
     }
-    // border: 3px solid red;
+    //
     width: 100%;
     // min-height: calc(100vh - 260px);
     min-height: calc(100vh - 130px);
     padding: 3rem;
+    padding: 2rem;
     @include center;
     flex-direction: column;
 
@@ -192,11 +195,11 @@
 
 @media screen and (max-width: 1100px) {
   .body {
-    .pageTitle {
-      h1 {
-        font-size: 2rem;
-      }
-    }
+    // .pageTitle {
+    //   h1 {
+    //     font-size: 2rem;
+    //   }
+    // }
     main {
       .box {
         width: 75%;
@@ -259,7 +262,7 @@
     }
     .pageTitleCocktail {
       h1 {
-        font-size: 1.6rem;
+        font-size: 2rem;
       }
     }
 
@@ -317,22 +320,45 @@
   }
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 650px) {
   .body {
     .pageTitleCocktail {
+      h1 {
+        font-size: 1.75rem;
+      }
+    }
+  }
+}
+
+// 🔥1列表示に変更🔥
+
+@media screen and (max-width: 550px) {
+  .body {
+    .pageTitle {
+      h1 {
+        font-size: 1.8rem;
+      }
+    }
+
+    .pageTitleCocktail {
+      padding: 0.5rem 0;
       flex-direction: column;
+
+      h1 {
+        font-size: 1.8rem;
+      }
+
       h1:nth-child(1) {
         margin-bottom: 0.3rem;
       }
 
-      h1 {
-        font-size: 1.8rem;
-        margin-left: 0rem;
+      h1:nth-child(2) {
+        margin-left: 0;
       }
     }
 
     main {
-      padding: 3rem 2.5rem;
+      padding: 2rem 2.5rem;
 
       .box {
         width: 100%;
@@ -381,17 +407,18 @@
     top: 100px;
     .pageTitle {
       h1 {
-        font-size: 1.8rem;
+        font-size: 1.7rem;
       }
     }
 
     .pageTitleCocktail {
       h1 {
         font-size: 1.7rem;
+        font-size: 1.6rem;
       }
     }
     main {
-      padding: 3rem 2rem;
+      padding: 2rem 2rem;
 
       .box {
         width: 100%;
@@ -453,7 +480,7 @@
     top: 100px;
     .pageTitle {
       h1 {
-        font-size: 1.7rem;
+        font-size: 1.6rem;
       }
     }
 
@@ -463,7 +490,7 @@
       }
     }
     main {
-      padding: 3rem 2rem;
+      padding: 2rem 2rem;
 
       .box {
         width: 100%;
@@ -506,6 +533,22 @@
           width: 100%;
           height: 200px;
         }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .body {
+    .pageTitle {
+      h1 {
+        font-size: 1.6rem;
+      }
+    }
+
+    .pageTitleCocktail {
+      h1 {
+        font-size: 1.35em;
       }
     }
   }
