--- a/styles/[id].module.scss
+++ b/styles/[id].module.scss
@@ -342,6 +342,7 @@
 
     .pageTitleCocktail {
       padding: 0.5rem 0;
+      padding: 0;
       flex-direction: column;
 
       h1 {
@@ -406,6 +407,7 @@
   .body {
     top: 100px;
     .pageTitle {
+      padding:  0;
       h1 {
         font-size: 1.7rem;
       }
