--- a/styles/[id].module.css
+++ b/styles/[id].module.css
@@ -26,12 +26,11 @@
   font-size: 2rem;
   margin: 0;
 }
-.body main {
+.body .barrelMain {
   position: relative;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-image: url("/image/all-menu/barrel.jpg");
   width: 100%;
   min-height: calc(100vh - 130px);
   padding: 3rem;
@@ -40,8 +39,9 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background-image: url("/image/all-menu/barrel.jpg");
 }
-.body main::after {
+.body .barrelMain::after {
   content: "";
   background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
@@ -51,7 +51,7 @@
   bottom: 0;
   height: 100%;
 }
-.body main .box {
+.body .barrelMain .box {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -62,14 +62,14 @@
   padding: 1.5rem;
   width: 65%;
 }
-.body main .box .sentence {
+.body .barrelMain .box .sentence {
   width: 70%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-.body main .box .sentence .title {
+.body .barrelMain .box .sentence .title {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -78,7 +78,7 @@
   padding: 0.8rem;
   font-size: 1.3rem;
 }
-.body main .box .sentence .aboutBox {
+.body .barrelMain .box .sentence .aboutBox {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -87,31 +87,31 @@
   padding: 0.8rem;
   font-weight: bold;
 }
-.body main .box .sentence .aboutBox .price {
+.body .barrelMain .box .sentence .aboutBox .price {
   margin: 0 1.5rem 0 0;
   font-size: 0.9rem;
 }
-.body main .box .sentence .aboutBox .product p {
+.body .barrelMain .box .sentence .aboutBox .product p {
   margin: 0;
   font-size: 0.85rem;
 }
-.body main .box .sentence .detail {
+.body .barrelMain .box .sentence .detail {
   max-height: 200px;
   overflow: scroll;
   width: 100%;
   padding: 0.8rem;
   line-height: 1.8;
 }
-.body main .box .sentence .detail p {
+.body .barrelMain .box .sentence .detail p {
   margin: 0;
   font-size: 0.9rem;
 }
-.body main .box .image {
+.body .barrelMain .box .image {
   position: relative;
   width: 30%;
   height: 300px;
 }
-.body main .buttonBox {
+.body .barrelMain .buttonBox {
   width: 65%;
   margin-top: 2rem;
   display: flex;
@@ -120,10 +120,10 @@
   color: white;
   z-index: 1;
 }
-.body main .buttonBox a:nth-child(2) {
+.body .barrelMain .buttonBox a:nth-child(2) {
   margin: 0;
 }
-.body main .buttonBox a {
+.body .barrelMain .buttonBox a {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -135,12 +135,246 @@
   border-radius: 10px;
   cursor: pointer;
 }
-.body main .buttonBox a:hover {
+.body .barrelMain .buttonBox a:hover {
   background-color: white;
   color: black;
   transition: 300ms;
 }
-.body main .buttonBox a .icon {
+.body .barrelMain .buttonBox a .icon {
+  margin: 0 1rem 0 0;
+}
+.body .bottleMain {
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  min-height: calc(100vh - 130px);
+  padding: 3rem;
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-image: url("/image/all-menu/bottle.jpg");
+}
+.body .bottleMain::after {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  height: 100%;
+}
+.body .bottleMain .box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  background-color: white;
+  box-shadow: 5px 5px 10px gray;
+  border-radius: 10px;
+  padding: 1.5rem;
+  width: 65%;
+}
+.body .bottleMain .box .sentence {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.body .bottleMain .box .sentence .title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  width: 100%;
+  padding: 0.8rem;
+  font-size: 1.3rem;
+}
+.body .bottleMain .box .sentence .aboutBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  width: 100%;
+  padding: 0.8rem;
+  font-weight: bold;
+}
+.body .bottleMain .box .sentence .aboutBox .price {
+  margin: 0 1.5rem 0 0;
+  font-size: 0.9rem;
+}
+.body .bottleMain .box .sentence .aboutBox .product p {
+  margin: 0;
+  font-size: 0.85rem;
+}
+.body .bottleMain .box .sentence .detail {
+  max-height: 200px;
+  overflow: scroll;
+  width: 100%;
+  padding: 0.8rem;
+  line-height: 1.8;
+}
+.body .bottleMain .box .sentence .detail p {
+  margin: 0;
+  font-size: 0.9rem;
+}
+.body .bottleMain .box .image {
+  position: relative;
+  width: 30%;
+  height: 300px;
+}
+.body .bottleMain .buttonBox {
+  width: 65%;
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  z-index: 1;
+}
+.body .bottleMain .buttonBox a:nth-child(2) {
+  margin: 0;
+}
+.body .bottleMain .buttonBox a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid white;
+  color: white;
+  z-index: 1;
+  padding: 1rem 2rem;
+  font-weight: bold;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.body .bottleMain .buttonBox a:hover {
+  background-color: white;
+  color: black;
+  transition: 300ms;
+}
+.body .bottleMain .buttonBox a .icon {
+  margin: 0 1rem 0 0;
+}
+.body .cocktailMain {
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  min-height: calc(100vh - 130px);
+  padding: 3rem;
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-image: url("/image/all-menu/cocktail.jpg");
+}
+.body .cocktailMain::after {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  height: 100%;
+}
+.body .cocktailMain .box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  background-color: white;
+  box-shadow: 5px 5px 10px gray;
+  border-radius: 10px;
+  padding: 1.5rem;
+  width: 65%;
+}
+.body .cocktailMain .box .sentence {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.body .cocktailMain .box .sentence .title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  width: 100%;
+  padding: 0.8rem;
+  font-size: 1.3rem;
+}
+.body .cocktailMain .box .sentence .aboutBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  width: 100%;
+  padding: 0.8rem;
+  font-weight: bold;
+}
+.body .cocktailMain .box .sentence .aboutBox .price {
+  margin: 0 1.5rem 0 0;
+  font-size: 0.9rem;
+}
+.body .cocktailMain .box .sentence .aboutBox .product p {
+  margin: 0;
+  font-size: 0.85rem;
+}
+.body .cocktailMain .box .sentence .detail {
+  max-height: 200px;
+  overflow: scroll;
+  width: 100%;
+  padding: 0.8rem;
+  line-height: 1.8;
+}
+.body .cocktailMain .box .sentence .detail p {
+  margin: 0;
+  font-size: 0.9rem;
+}
+.body .cocktailMain .box .image {
+  position: relative;
+  width: 30%;
+  height: 300px;
+}
+.body .cocktailMain .buttonBox {
+  width: 65%;
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  z-index: 1;
+}
+.body .cocktailMain .buttonBox a:nth-child(2) {
+  margin: 0;
+}
+.body .cocktailMain .buttonBox a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid white;
+  color: white;
+  z-index: 1;
+  padding: 1rem 2rem;
+  font-weight: bold;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.body .cocktailMain .buttonBox a:hover {
+  background-color: white;
+  color: black;
+  transition: 300ms;
+}
+.body .cocktailMain .buttonBox a .icon {
   margin: 0 1rem 0 0;
 }
 .body footer {
@@ -157,34 +391,52 @@
 }
 
 @media screen and (max-width: 1100px) {
-  .body main .box {
+  .body .barrelMain .box,
+.body .bottleMain .box,
+.body .cocktailMain .box {
     width: 75%;
   }
-  .body main .buttonBox {
+  .body .barrelMain .buttonBox,
+.body .bottleMain .buttonBox,
+.body .cocktailMain .buttonBox {
     width: 75%;
   }
 }
 @media screen and (max-width: 1024px) {
-  .body main .box {
+  .body .barrelMain .box,
+.body .bottleMain .box,
+.body .cocktailMain .box {
     width: 90%;
   }
-  .body main .box .sentence .title {
+  .body .barrelMain .box .sentence .title,
+.body .bottleMain .box .sentence .title,
+.body .cocktailMain .box .sentence .title {
     font-size: 1.3rem;
   }
-  .body main .box .sentence .aboutBox .price {
+  .body .barrelMain .box .sentence .aboutBox .price,
+.body .bottleMain .box .sentence .aboutBox .price,
+.body .cocktailMain .box .sentence .aboutBox .price {
     font-size: 0.85rem;
   }
-  .body main .box .sentence .aboutBox .product p {
+  .body .barrelMain .box .sentence .aboutBox .product p,
+.body .bottleMain .box .sentence .aboutBox .product p,
+.body .cocktailMain .box .sentence .aboutBox .product p {
     font-size: 0.8rem;
   }
-  .body main .box .sentence .detail p {
+  .body .barrelMain .box .sentence .detail p,
+.body .bottleMain .box .sentence .detail p,
+.body .cocktailMain .box .sentence .detail p {
     font-size: 0.9rem;
   }
-  .body main .box .image {
+  .body .barrelMain .box .image,
+.body .bottleMain .box .image,
+.body .cocktailMain .box .image {
     width: 30%;
     height: 280px;
   }
-  .body main .buttonBox {
+  .body .barrelMain .buttonBox,
+.body .bottleMain .buttonBox,
+.body .cocktailMain .buttonBox {
     width: 90%;
   }
 }
@@ -195,43 +447,65 @@
   .body .pageTitleCocktail h1 {
     font-size: 2rem;
   }
-  .body main .box {
+  .body .barrelMain .box,
+.body .bottleMain .box,
+.body .cocktailMain .box {
     width: 100%;
     flex-direction: column;
   }
-  .body main .box .sentence {
+  .body .barrelMain .box .sentence,
+.body .bottleMain .box .sentence,
+.body .cocktailMain .box .sentence {
     display: grid;
     grid-template: "title" "product" "about" "image"/1fr;
     width: 100%;
   }
-  .body main .box .sentence .title {
+  .body .barrelMain .box .sentence .title,
+.body .bottleMain .box .sentence .title,
+.body .cocktailMain .box .sentence .title {
     grid-area: title;
     font-size: 1.3rem;
   }
-  .body main .box .sentence .aboutBox {
+  .body .barrelMain .box .sentence .aboutBox,
+.body .bottleMain .box .sentence .aboutBox,
+.body .cocktailMain .box .sentence .aboutBox {
     grid-area: product;
   }
-  .body main .box .sentence .aboutBox .price {
+  .body .barrelMain .box .sentence .aboutBox .price,
+.body .bottleMain .box .sentence .aboutBox .price,
+.body .cocktailMain .box .sentence .aboutBox .price {
     font-size: 0.9rem;
   }
-  .body main .box .sentence .aboutBox .product p {
+  .body .barrelMain .box .sentence .aboutBox .product p,
+.body .bottleMain .box .sentence .aboutBox .product p,
+.body .cocktailMain .box .sentence .aboutBox .product p {
     font-size: 0.85rem;
   }
-  .body main .box .sentence .detail {
+  .body .barrelMain .box .sentence .detail,
+.body .bottleMain .box .sentence .detail,
+.body .cocktailMain .box .sentence .detail {
     grid-area: about;
   }
-  .body main .box .sentence .detail p {
+  .body .barrelMain .box .sentence .detail p,
+.body .bottleMain .box .sentence .detail p,
+.body .cocktailMain .box .sentence .detail p {
     font-size: 0.9rem;
   }
-  .body main .box .image {
+  .body .barrelMain .box .image,
+.body .bottleMain .box .image,
+.body .cocktailMain .box .image {
     grid-area: image;
     width: 100%;
     height: 200px;
   }
-  .body main .buttonBox {
+  .body .barrelMain .buttonBox,
+.body .bottleMain .buttonBox,
+.body .cocktailMain .buttonBox {
     width: 100%;
   }
-  .body main .buttonBox a {
+  .body .barrelMain .buttonBox a,
+.body .bottleMain .buttonBox a,
+.body .cocktailMain .buttonBox a {
     padding: 0.8rem 1.5rem;
   }
 }
@@ -258,35 +532,53 @@
   .body .pageTitleCocktail h1:nth-child(2) {
     margin-left: 0;
   }
-  .body main {
+  .body .barrelMain,
+.body .bottleMain,
+.body .cocktailMain {
     padding: 2rem 2.5rem;
   }
-  .body main .box {
+  .body .barrelMain .box,
+.body .bottleMain .box,
+.body .cocktailMain .box {
     width: 100%;
     flex-direction: column;
     padding: 1rem;
     padding: 1rem 0.5rem;
   }
-  .body main .box .sentence {
+  .body .barrelMain .box .sentence,
+.body .bottleMain .box .sentence,
+.body .cocktailMain .box .sentence {
     width: 100%;
   }
-  .body main .box .sentence .title {
+  .body .barrelMain .box .sentence .title,
+.body .bottleMain .box .sentence .title,
+.body .cocktailMain .box .sentence .title {
     font-size: 1.3rem;
   }
-  .body main .box .sentence .aboutBox {
+  .body .barrelMain .box .sentence .aboutBox,
+.body .bottleMain .box .sentence .aboutBox,
+.body .cocktailMain .box .sentence .aboutBox {
     flex-direction: column;
   }
-  .body main .box .sentence .aboutBox .price {
+  .body .barrelMain .box .sentence .aboutBox .price,
+.body .bottleMain .box .sentence .aboutBox .price,
+.body .cocktailMain .box .sentence .aboutBox .price {
     font-size: 0.9rem;
     margin: 0 0 1rem;
   }
-  .body main .box .sentence .aboutBox .product p {
+  .body .barrelMain .box .sentence .aboutBox .product p,
+.body .bottleMain .box .sentence .aboutBox .product p,
+.body .cocktailMain .box .sentence .aboutBox .product p {
     font-size: 0.8rem;
   }
-  .body main .box .sentence .detail p {
+  .body .barrelMain .box .sentence .detail p,
+.body .bottleMain .box .sentence .detail p,
+.body .cocktailMain .box .sentence .detail p {
     font-size: 0.9rem;
   }
-  .body main .box .image {
+  .body .barrelMain .box .image,
+.body .bottleMain .box .image,
+.body .cocktailMain .box .image {
     width: 100%;
     height: 200px;
   }
@@ -305,48 +597,72 @@
     font-size: 1.7rem;
     font-size: 1.6rem;
   }
-  .body main {
+  .body .barrelMain,
+.body .bottleMain,
+.body .cocktailMain {
     padding: 2rem 2rem;
   }
-  .body main .box {
+  .body .barrelMain .box,
+.body .bottleMain .box,
+.body .cocktailMain .box {
     width: 100%;
     flex-direction: column;
     padding: 0.5rem;
   }
-  .body main .box .sentence {
+  .body .barrelMain .box .sentence,
+.body .bottleMain .box .sentence,
+.body .cocktailMain .box .sentence {
     width: 100%;
   }
-  .body main .box .sentence .title {
+  .body .barrelMain .box .sentence .title,
+.body .bottleMain .box .sentence .title,
+.body .cocktailMain .box .sentence .title {
     font-size: 1.2rem;
     padding: 0.5rem 0;
   }
-  .body main .box .sentence .aboutBox {
+  .body .barrelMain .box .sentence .aboutBox,
+.body .bottleMain .box .sentence .aboutBox,
+.body .cocktailMain .box .sentence .aboutBox {
     flex-direction: column;
     padding: 0.5rem;
   }
-  .body main .box .sentence .aboutBox .price {
+  .body .barrelMain .box .sentence .aboutBox .price,
+.body .bottleMain .box .sentence .aboutBox .price,
+.body .cocktailMain .box .sentence .aboutBox .price {
     font-size: 0.9rem;
     margin: 0 0 1rem;
   }
-  .body main .box .sentence .aboutBox .product p {
+  .body .barrelMain .box .sentence .aboutBox .product p,
+.body .bottleMain .box .sentence .aboutBox .product p,
+.body .cocktailMain .box .sentence .aboutBox .product p {
     font-size: 0.8rem;
   }
-  .body main .box .sentence .detail {
+  .body .barrelMain .box .sentence .detail,
+.body .bottleMain .box .sentence .detail,
+.body .cocktailMain .box .sentence .detail {
     max-height: 200px;
     overflow: scroll;
     padding: 0.5rem;
   }
-  .body main .box .sentence .detail p {
+  .body .barrelMain .box .sentence .detail p,
+.body .bottleMain .box .sentence .detail p,
+.body .cocktailMain .box .sentence .detail p {
     font-size: 0.8rem;
   }
-  .body main .box .image {
+  .body .barrelMain .box .image,
+.body .bottleMain .box .image,
+.body .cocktailMain .box .image {
     width: 100%;
     height: 200px;
   }
-  .body main .buttonBox {
+  .body .barrelMain .buttonBox,
+.body .bottleMain .buttonBox,
+.body .cocktailMain .buttonBox {
     width: 100%;
   }
-  .body main .buttonBox a {
+  .body .barrelMain .buttonBox a,
+.body .bottleMain .buttonBox a,
+.body .cocktailMain .buttonBox a {
     padding: 0.8rem 1rem;
     font-size: 0.9rem;
   }
@@ -361,39 +677,59 @@
   .body .pageTitleCocktail h1 {
     font-size: 1.45rem;
   }
-  .body main {
+  .body .barrelMain,
+.body .bottleMain,
+.body .cocktailMain {
     padding: 2rem 2rem;
   }
-  .body main .box {
+  .body .barrelMain .box,
+.body .bottleMain .box,
+.body .cocktailMain .box {
     width: 100%;
     flex-direction: column;
     padding: 0.5rem;
   }
-  .body main .box .sentence {
+  .body .barrelMain .box .sentence,
+.body .bottleMain .box .sentence,
+.body .cocktailMain .box .sentence {
     width: 100%;
   }
-  .body main .box .sentence .title {
+  .body .barrelMain .box .sentence .title,
+.body .bottleMain .box .sentence .title,
+.body .cocktailMain .box .sentence .title {
     font-size: 1rem;
     padding: 0.5rem 0;
   }
-  .body main .box .sentence .aboutBox {
+  .body .barrelMain .box .sentence .aboutBox,
+.body .bottleMain .box .sentence .aboutBox,
+.body .cocktailMain .box .sentence .aboutBox {
     flex-direction: column;
     padding: 0.5rem;
   }
-  .body main .box .sentence .aboutBox .price {
+  .body .barrelMain .box .sentence .aboutBox .price,
+.body .bottleMain .box .sentence .aboutBox .price,
+.body .cocktailMain .box .sentence .aboutBox .price {
     font-size: 0.8rem;
     margin: 0 0 1rem;
   }
-  .body main .box .sentence .aboutBox .product p {
+  .body .barrelMain .box .sentence .aboutBox .product p,
+.body .bottleMain .box .sentence .aboutBox .product p,
+.body .cocktailMain .box .sentence .aboutBox .product p {
     font-size: 0.7rem;
   }
-  .body main .box .sentence .detail {
+  .body .barrelMain .box .sentence .detail,
+.body .bottleMain .box .sentence .detail,
+.body .cocktailMain .box .sentence .detail {
     padding: 0.5rem;
   }
-  .body main .box .sentence .detail p {
+  .body .barrelMain .box .sentence .detail p,
+.body .bottleMain .box .sentence .detail p,
+.body .cocktailMain .box .sentence .detail p {
     font-size: 0.8rem;
   }
-  .body main .box .image {
+  .body .barrelMain .box .image,
+.body .bottleMain .box .image,
+.body .cocktailMain .box .image {
     width: 100%;
     height: 200px;
   }
