--- a/styles/[id].module.scss
+++ b/styles/[id].module.scss
@@ -274,6 +274,10 @@
     .barrelMain,
     .bottleMain,
     .cocktailMain {
+      background-size: 100%;
+      background-position: center;
+      background-repeat: repeat-y;
+
       .box {
         width: 100%;
         flex-direction: column;
@@ -284,7 +288,6 @@
 
           .title {
             grid-area: title;
-
             font-size: 1.3rem;
           }
 
